fixed buttons in project section & added hover effect on card. Added wordwrap property

--- a/src/components/FormStyles.css
+++ b/src/components/FormStyles.css
@@ -20,3 +20,10 @@ form textarea {
   border-color: rgb(96, 95, 95);
   color: white;
 }
+
+form button {
+  background-color: rgb(174, 206, 222);
+  border: 1px solid rgb(0, 0, 0);
+  margin-bottom: 0.5rem;
+  padding: 0.5rem;
+}
