--- a/src/components/NavBarStyles.css
+++ b/src/components/NavBarStyles.css
@@ -35,7 +35,7 @@
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-color: rgb(137, 171, 14);
+    background-color: rgb(16, 110, 157);
     position: absolute;
     top: 0;
     left: -100%;
