--- a/src/components/ProjectCardStyles.css
+++ b/src/components/ProjectCardStyles.css
@@ -3,6 +3,17 @@
   padding: 4rem 0 2rem 0;
 }
 
+.project-card {
+  border: 1px solid white;
+  text-align: center;
+  padding: 1.2rem 1rem;
+  background-color: #474e5d;
+}
+
+.project-card:hover {
+  background-color: rgb(29, 27, 27);
+}
+
 .project-container2 {
   max-width: 1140px;
   margin: auto;
@@ -10,11 +21,6 @@
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 40px;
   padding-bottom: 5rem;
-}
-
-.project-card {
-  background-color: rgb(13, 12, 12);
-  padding: 1.2rem 1rem;
 }
 
 .project-card img {
@@ -30,26 +36,27 @@
   padding-bottom: 1rem;
   font-size: 1.1rem;
   text-align: justify;
+  word-wrap: break-word;
+}
+
+.pbutton {
+  display: block;
+  justify-content: space-between;
+  background-color: rgb(16, 110, 157);
+  border: 1px solid rgb(0, 0, 0);
+  margin-bottom: 0.5rem;
+  padding: 0.5rem;
 }
 
 .ProjectButtons {
-  /*   display: flex;
- */
-  justify-content: space-between;
-  padding: 0.5rem 1rem;
-  background-color: rgb(0, 170, 255);
-  margin-left: 3.5rem;
-}
-
-.ProjectButtons .button {
-  display: flex;
-  width: 80%;
+  padding: 2.5rem 2;
 }
 
 @media screen and (max-width: 740px) {
   .project-container2 {
     max-width: 90%;
     margin: auto;
+    /*     display: flex; */
     grid-template-columns: 1fr;
   }
 }
